--- a/E_overm-model.ipynb
+++ b/E_overm-model.ipynb
@@ -28,7 +28,7 @@
    "source": [
     "import numpy as np\n",
     "from matplotlib import pyplot as plt\n",
-    "from em_Simulation import HH_field # This is a function you will create\n"
+    "from em_Simulation import HH_field, Lorentz_force # These are  functions you will create\n"
    ]
   },
   {
